test/param/diten/errorDepth.depth0.good
errorDepth.chpl:1: In function 'foo':
errorDepth.chpl:3: error: error 0
errorDepth.chpl:10: Function 'foo' instantiated as: foo(param d = 0)
